kubernetes/build/templates/deployment.yml
#@ load("@ytt:data", "data")
#@ load("@ytt:assert", "assert")
#@ load("_ytt.lib.yml", "labels")

#@ if len(data.values.backman.services) == 0:
#@  assert.fail("backman.services are missing or invalid")
#@ end

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backman
  namespace: backman
  labels: #@ labels("backman","gui")
spec:
  selector:
    matchLabels: #@ labels("backman","gui")
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: Recreate
  template:
    metadata:
      labels: #@ labels("backman","gui")
      annotations:
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: backman
      securityContext:
        runAsUser: 2000
        runAsGroup: 2000
        fsGroup: 2000
      containers:
      - name: backman
        image: #@ data.values.backman.image
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        command: [ "backman" ]
        args: [ "-config", "/backman/config.json" ]
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        readinessProbe:
          httpGet:
            path: /metrics
            port: 8080
        livenessProbe:
          initialDelaySeconds: 15
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - mountPath: /backman/config.json
          name: backman-configuration
          subPath: config.json
#@ for idx in range(len(data.values.backman.services)):
#@   service = data.values.backman.services[idx]
        - mountPath: #@ "/bindings/" + service.name
          name: #@ service.name.lower().strip().replace(" ","-").replace("_","-")
#@ end
      volumes:
      - name: backman-configuration
        secret:
          secretName: backman
#@ for idx in range(len(data.values.backman.services)):
#@   service = data.values.backman.services[idx]
      - name: #@ service.name.lower().strip().replace(" ","-").replace("_","-")
        secret:
          secretName: #@ service.name.lower().strip().replace(" ","-").replace("_","-")
#@ end
