kubernetes/build/templates/service.yml
#@ load("_ytt.lib.yml", "labels")

---
apiVersion: v1
kind: Service
metadata:
  name: backman
  namespace: backman
  labels: #@ labels("backman","svc")
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector: #@ labels("backman","gui")
