kubernetes/build/templates/network_policy.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")

#@ if data.values.backman.network_policy.enabled and (len(data.values.backman.network_policy.namespace_labels.ingress) > 0 or len(data.values.backman.network_policy.namespace_labels.prometheus) > 0):
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backman
  namespace: backman
  labels: #@ labels("backman","netpol")
spec:
  podSelector:
    matchLabels: #@ labels("backman","gui")
  ingress:
  #@ if len(data.values.backman.network_policy.namespace_labels.prometheus) > 0:
  - from: #! allow access for prometheus
    - namespaceSelector:
        matchLabels: #@ data.values.backman.network_policy.namespace_labels.prometheus
      podSelector: {}
    ports:
    - port: 8080
  #@ end
  #@ if data.values.backman.ingress.enabled and len(data.values.backman.network_policy.namespace_labels.ingress) > 0:
  - from: #! allow access for ingress-controller
    - namespaceSelector:
        matchLabels: #@ data.values.backman.network_policy.namespace_labels.ingress
      podSelector: {}
    ports:
    - port: 8080
  #@ end
#@ end
